// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getExtendedModulesById should extend all the modules 1`] = `
Object {
  "0": Object {
    "assets": Array [],
    "built": false,
    "cacheable": false,
    "chunks": Array [],
    "cumulativeSize": 1200,
    "errors": 0,
    "failed": false,
    "id": 0,
    "identifier": "",
    "index": 0,
    "index2": 0,
    "issuer": "",
    "issuerId": "",
    "loops": Array [],
    "name": "Entry Zero",
    "optional": false,
    "prefetched": false,
    "providedExports": null,
    "reasons": Array [],
    "requiredBy": Array [],
    "requiredByCount": 0,
    "requirements": Array [
      Object {
        "assets": Array [],
        "built": false,
        "cacheable": false,
        "chunks": Array [],
        "errors": 0,
        "failed": false,
        "id": 2,
        "identifier": "",
        "index": 0,
        "index2": 0,
        "issuer": "",
        "issuerId": "",
        "name": "Module Zero-A",
        "optional": false,
        "prefetched": false,
        "providedExports": null,
        "reasons": Array [
          Object {
            "loc": "",
            "module": "Entry Zero",
            "moduleId": 0,
            "moduleIdentifier": "",
            "moduleName": "Entry Zero",
            "type": "",
            "userRequest": "",
          },
        ],
        "size": 250,
        "usedExports": true,
        "warnings": 0,
      },
      Object {
        "assets": Array [],
        "built": false,
        "cacheable": false,
        "chunks": Array [],
        "errors": 0,
        "failed": false,
        "id": 3,
        "identifier": "",
        "index": 0,
        "index2": 0,
        "issuer": "",
        "issuerId": "",
        "name": "Module Common",
        "optional": false,
        "prefetched": false,
        "providedExports": null,
        "reasons": Array [
          Object {
            "loc": "",
            "module": "Entry Zero",
            "moduleId": 0,
            "moduleIdentifier": "",
            "moduleName": "Entry Zero",
            "type": "",
            "userRequest": "",
          },
          Object {
            "loc": "",
            "module": "Entry One",
            "moduleId": 1,
            "moduleIdentifier": "",
            "moduleName": "Entry One",
            "type": "",
            "userRequest": "",
          },
        ],
        "size": 200,
        "usedExports": true,
        "warnings": 0,
      },
    ],
    "requirementsCount": 2,
    "size": 100,
    "usedExports": true,
    "warnings": 0,
  },
  "1": Object {
    "assets": Array [],
    "built": false,
    "cacheable": false,
    "chunks": Array [],
    "cumulativeSize": 1350,
    "errors": 0,
    "failed": false,
    "id": 1,
    "identifier": "",
    "index": 0,
    "index2": 0,
    "issuer": "",
    "issuerId": "",
    "loops": Array [],
    "name": "Entry One",
    "optional": false,
    "prefetched": false,
    "providedExports": null,
    "reasons": Array [],
    "requiredBy": Array [],
    "requiredByCount": 0,
    "requirements": Array [
      Object {
        "assets": Array [],
        "built": false,
        "cacheable": false,
        "chunks": Array [],
        "errors": 0,
        "failed": false,
        "id": 3,
        "identifier": "",
        "index": 0,
        "index2": 0,
        "issuer": "",
        "issuerId": "",
        "name": "Module Common",
        "optional": false,
        "prefetched": false,
        "providedExports": null,
        "reasons": Array [
          Object {
            "loc": "",
            "module": "Entry Zero",
            "moduleId": 0,
            "moduleIdentifier": "",
            "moduleName": "Entry Zero",
            "type": "",
            "userRequest": "",
          },
          Object {
            "loc": "",
            "module": "Entry One",
            "moduleId": 1,
            "moduleIdentifier": "",
            "moduleName": "Entry One",
            "type": "",
            "userRequest": "",
          },
        ],
        "size": 200,
        "usedExports": true,
        "warnings": 0,
      },
      Object {
        "assets": Array [],
        "built": false,
        "cacheable": false,
        "chunks": Array [],
        "errors": 0,
        "failed": false,
        "id": 600,
        "identifier": "",
        "index": 0,
        "index2": 0,
        "issuer": "",
        "issuerId": "",
        "name": "Module One-A",
        "optional": false,
        "prefetched": false,
        "providedExports": null,
        "reasons": Array [
          Object {
            "loc": "",
            "module": "Entry One",
            "moduleId": 1,
            "moduleIdentifier": "",
            "moduleName": "Entry One",
            "type": "",
            "userRequest": "",
          },
        ],
        "size": 600,
        "usedExports": true,
        "warnings": 0,
      },
    ],
    "requirementsCount": 2,
    "size": 100,
    "usedExports": true,
    "warnings": 0,
  },
  "2": Object {
    "assets": Array [],
    "built": false,
    "cacheable": false,
    "chunks": Array [],
    "cumulativeSize": 750,
    "errors": 0,
    "failed": false,
    "id": 2,
    "identifier": "",
    "index": 0,
    "index2": 0,
    "issuer": "",
    "issuerId": "",
    "loops": Array [],
    "name": "Module Zero-A",
    "optional": false,
    "prefetched": false,
    "providedExports": null,
    "reasons": Array [
      Object {
        "loc": "",
        "module": "Entry Zero",
        "moduleId": 0,
        "moduleIdentifier": "",
        "moduleName": "Entry Zero",
        "type": "",
        "userRequest": "",
      },
    ],
    "requiredBy": Array [
      Object {
        "loc": "",
        "module": "Entry Zero",
        "moduleId": 0,
        "moduleIdentifier": "",
        "moduleName": "Entry Zero",
        "type": "",
        "userRequest": "",
      },
    ],
    "requiredByCount": 1,
    "requirements": Array [
      Object {
        "assets": Array [],
        "built": false,
        "cacheable": false,
        "chunks": Array [],
        "errors": 0,
        "failed": false,
        "id": 5,
        "identifier": "",
        "index": 0,
        "index2": 0,
        "issuer": "",
        "issuerId": "",
        "name": "Big Module",
        "optional": false,
        "prefetched": false,
        "providedExports": null,
        "reasons": Array [
          Object {
            "loc": "",
            "module": "Module Zero-A",
            "moduleId": 2,
            "moduleIdentifier": "",
            "moduleName": "Module Zero-A",
            "type": "",
            "userRequest": "",
          },
          Object {
            "loc": "",
            "module": "Module Common",
            "moduleId": 3,
            "moduleIdentifier": "",
            "moduleName": "Module Common",
            "type": "",
            "userRequest": "",
          },
        ],
        "size": 1000,
        "usedExports": true,
        "warnings": 0,
      },
    ],
    "requirementsCount": 1,
    "size": 250,
    "usedExports": true,
    "warnings": 0,
  },
  "3": Object {
    "assets": Array [],
    "built": false,
    "cacheable": false,
    "chunks": Array [],
    "cumulativeSize": 700,
    "errors": 0,
    "failed": false,
    "id": 3,
    "identifier": "",
    "index": 0,
    "index2": 0,
    "issuer": "",
    "issuerId": "",
    "loops": Array [],
    "name": "Module Common",
    "optional": false,
    "prefetched": false,
    "providedExports": null,
    "reasons": Array [
      Object {
        "loc": "",
        "module": "Entry Zero",
        "moduleId": 0,
        "moduleIdentifier": "",
        "moduleName": "Entry Zero",
        "type": "",
        "userRequest": "",
      },
      Object {
        "loc": "",
        "module": "Entry One",
        "moduleId": 1,
        "moduleIdentifier": "",
        "moduleName": "Entry One",
        "type": "",
        "userRequest": "",
      },
    ],
    "requiredBy": Array [
      Object {
        "loc": "",
        "module": "Entry Zero",
        "moduleId": 0,
        "moduleIdentifier": "",
        "moduleName": "Entry Zero",
        "type": "",
        "userRequest": "",
      },
      Object {
        "loc": "",
        "module": "Entry One",
        "moduleId": 1,
        "moduleIdentifier": "",
        "moduleName": "Entry One",
        "type": "",
        "userRequest": "",
      },
    ],
    "requiredByCount": 2,
    "requirements": Array [
      Object {
        "assets": Array [],
        "built": false,
        "cacheable": false,
        "chunks": Array [],
        "errors": 0,
        "failed": false,
        "id": 5,
        "identifier": "",
        "index": 0,
        "index2": 0,
        "issuer": "",
        "issuerId": "",
        "name": "Big Module",
        "optional": false,
        "prefetched": false,
        "providedExports": null,
        "reasons": Array [
          Object {
            "loc": "",
            "module": "Module Zero-A",
            "moduleId": 2,
            "moduleIdentifier": "",
            "moduleName": "Module Zero-A",
            "type": "",
            "userRequest": "",
          },
          Object {
            "loc": "",
            "module": "Module Common",
            "moduleId": 3,
            "moduleIdentifier": "",
            "moduleName": "Module Common",
            "type": "",
            "userRequest": "",
          },
        ],
        "size": 1000,
        "usedExports": true,
        "warnings": 0,
      },
    ],
    "requirementsCount": 1,
    "size": 200,
    "usedExports": true,
    "warnings": 0,
  },
  "300": Object {
    "assets": Array [],
    "built": false,
    "cacheable": false,
    "chunks": Array [],
    "cumulativeSize": 300,
    "errors": 0,
    "failed": false,
    "id": 300,
    "identifier": "",
    "index": 0,
    "index2": 0,
    "issuer": "",
    "issuerId": "",
    "loops": Array [],
    "name": "Module One-B",
    "optional": false,
    "prefetched": false,
    "providedExports": null,
    "reasons": Array [
      Object {
        "loc": "",
        "module": "Module One-A",
        "moduleId": 600,
        "moduleIdentifier": "",
        "moduleName": "Module One-A",
        "type": "",
        "userRequest": "",
      },
    ],
    "requiredBy": Array [
      Object {
        "loc": "",
        "module": "Module One-A",
        "moduleId": 600,
        "moduleIdentifier": "",
        "moduleName": "Module One-A",
        "type": "",
        "userRequest": "",
      },
    ],
    "requiredByCount": 1,
    "requirements": Array [],
    "requirementsCount": 0,
    "size": 300,
    "usedExports": true,
    "warnings": 0,
  },
  "5": Object {
    "assets": Array [],
    "built": false,
    "cacheable": false,
    "chunks": Array [],
    "cumulativeSize": 1000,
    "errors": 0,
    "failed": false,
    "id": 5,
    "identifier": "",
    "index": 0,
    "index2": 0,
    "issuer": "",
    "issuerId": "",
    "loops": Array [],
    "name": "Big Module",
    "optional": false,
    "prefetched": false,
    "providedExports": null,
    "reasons": Array [
      Object {
        "loc": "",
        "module": "Module Zero-A",
        "moduleId": 2,
        "moduleIdentifier": "",
        "moduleName": "Module Zero-A",
        "type": "",
        "userRequest": "",
      },
      Object {
        "loc": "",
        "module": "Module Common",
        "moduleId": 3,
        "moduleIdentifier": "",
        "moduleName": "Module Common",
        "type": "",
        "userRequest": "",
      },
    ],
    "requiredBy": Array [
      Object {
        "loc": "",
        "module": "Module Zero-A",
        "moduleId": 2,
        "moduleIdentifier": "",
        "moduleName": "Module Zero-A",
        "type": "",
        "userRequest": "",
      },
      Object {
        "loc": "",
        "module": "Module Common",
        "moduleId": 3,
        "moduleIdentifier": "",
        "moduleName": "Module Common",
        "type": "",
        "userRequest": "",
      },
    ],
    "requiredByCount": 2,
    "requirements": Array [],
    "requirementsCount": 0,
    "size": 1000,
    "usedExports": true,
    "warnings": 0,
  },
  "600": Object {
    "assets": Array [],
    "built": false,
    "cacheable": false,
    "chunks": Array [],
    "cumulativeSize": 900,
    "errors": 0,
    "failed": false,
    "id": 600,
    "identifier": "",
    "index": 0,
    "index2": 0,
    "issuer": "",
    "issuerId": "",
    "loops": Array [],
    "name": "Module One-A",
    "optional": false,
    "prefetched": false,
    "providedExports": null,
    "reasons": Array [
      Object {
        "loc": "",
        "module": "Entry One",
        "moduleId": 1,
        "moduleIdentifier": "",
        "moduleName": "Entry One",
        "type": "",
        "userRequest": "",
      },
    ],
    "requiredBy": Array [
      Object {
        "loc": "",
        "module": "Entry One",
        "moduleId": 1,
        "moduleIdentifier": "",
        "moduleName": "Entry One",
        "type": "",
        "userRequest": "",
      },
    ],
    "requiredByCount": 1,
    "requirements": Array [
      Object {
        "assets": Array [],
        "built": false,
        "cacheable": false,
        "chunks": Array [],
        "errors": 0,
        "failed": false,
        "id": 300,
        "identifier": "",
        "index": 0,
        "index2": 0,
        "issuer": "",
        "issuerId": "",
        "name": "Module One-B",
        "optional": false,
        "prefetched": false,
        "providedExports": null,
        "reasons": Array [
          Object {
            "loc": "",
            "module": "Module One-A",
            "moduleId": 600,
            "moduleIdentifier": "",
            "moduleName": "Module One-A",
            "type": "",
            "userRequest": "",
          },
        ],
        "size": 300,
        "usedExports": true,
        "warnings": 0,
      },
    ],
    "requirementsCount": 1,
    "size": 600,
    "usedExports": true,
    "warnings": 0,
  },
}
`;

exports[`getExtendedModulesById should extend all the trimmed modules 1`] = `
Array [
  Object {
    "cumulativeSize": 1200,
    "id": 0,
    "identifier": "",
    "requiredByCount": 0,
    "requirements": Array [
      Object {
        "contributingSize": 750,
        "cumulativeSize": 750,
        "id": 2,
        "identifier": "",
        "requiredByCount": 1,
        "size": 250,
      },
      Object {
        "contributingSize": 350,
        "cumulativeSize": 700,
        "id": 3,
        "identifier": "",
        "requiredByCount": 2,
        "size": 200,
      },
    ],
    "size": 100,
  },
  Object {
    "cumulativeSize": 1350,
    "id": 1,
    "identifier": "",
    "requiredByCount": 0,
    "requirements": Array [
      Object {
        "contributingSize": 350,
        "cumulativeSize": 700,
        "id": 3,
        "identifier": "",
        "requiredByCount": 2,
        "size": 200,
      },
      Object {
        "contributingSize": 900,
        "cumulativeSize": 900,
        "id": 600,
        "identifier": "",
        "requiredByCount": 1,
        "size": 600,
      },
    ],
    "size": 100,
  },
  Object {
    "cumulativeSize": 750,
    "id": 2,
    "identifier": "",
    "requiredByCount": 1,
    "requirements": Array [
      Object {
        "contributingSize": 500,
        "cumulativeSize": 1000,
        "id": 5,
        "identifier": "",
        "requiredByCount": 2,
        "size": 1000,
      },
    ],
    "size": 250,
  },
  Object {
    "cumulativeSize": 700,
    "id": 3,
    "identifier": "",
    "requiredByCount": 2,
    "requirements": Array [
      Object {
        "contributingSize": 500,
        "cumulativeSize": 1000,
        "id": 5,
        "identifier": "",
        "requiredByCount": 2,
        "size": 1000,
      },
    ],
    "size": 200,
  },
  Object {
    "cumulativeSize": 1000,
    "id": 5,
    "identifier": "",
    "requiredByCount": 2,
    "requirements": Array [],
    "size": 1000,
  },
  Object {
    "cumulativeSize": 300,
    "id": 300,
    "identifier": "",
    "requiredByCount": 1,
    "requirements": Array [],
    "size": 300,
  },
  Object {
    "cumulativeSize": 900,
    "id": 600,
    "identifier": "",
    "requiredByCount": 1,
    "requirements": Array [
      Object {
        "contributingSize": 300,
        "cumulativeSize": 300,
        "id": 300,
        "identifier": "",
        "requiredByCount": 1,
        "size": 300,
      },
    ],
    "size": 600,
  },
]
`;
